--- a/jdynalloy-nuevo/.project
+++ b/jdynalloy-nuevo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JDynAlloy</name>
+	<name>jdynalloy-nuevo</name>
 	<comment></comment>
 	<projects>
 	</projects>
