Working with generated junit

--- a/fajita/result/taco.properties
+++ b/fajita/result/taco.properties
@@ -76,11 +76,11 @@ jmlParser.sourcePathStr=result/fajitaOut/sources/
 
 output_dir=result/tacoOutput
 
-relevantClasses=roops.core.objectsInstrumented.LinkedList,roops.utilInstrumented.RoopsArray,roops.core.objectsInstrumented.LinkedListNode
+relevantClasses=roops.core.objectsInstrumented.OurTests,roops.utilInstrumented.RoopsArray
 
-classToCheck=roops.core.objectsInstrumented.LinkedList
+classToCheck=roops.core.objectsInstrumented.OurTests
 
-methodToCheck=addLastTest_0
+methodToCheck=test1_0
 
 dynalloy.toAlloy.loopUnroll=3
 
