--- a/fajita/result/taco.properties
+++ b/fajita/result/taco.properties
@@ -76,13 +76,13 @@ jmlParser.sourcePathStr=result/fajitaOut/sources/
 
 output_dir=result/tacoOutput
 
-relevantClasses=roops.core.objectsInstrumented.LinkedList,roops.utilInstrumented.RoopsArray,roops.core.objectsInstrumented.LinkedListNode
+relevantClasses=roops.core.objectsInstrumented.AllDefTest,roops.utilInstrumented.RoopsArray
 
-classToCheck=roops.core.objectsInstrumented.LinkedList
+classToCheck=roops.core.objectsInstrumented.AllDefTest
 
-methodToCheck=addLastTest_0
+methodToCheck=test4_0
 
-dynalloy.toAlloy.loopUnroll=1
+dynalloy.toAlloy.loopUnroll=3
 
 # DANIEL: Removed int bit width since it's now inferred
 #int.bitwidth=5
