Starting with mcc

--- a/fajita/result/taco.properties
+++ b/fajita/result/taco.properties
@@ -76,11 +76,11 @@ jmlParser.sourcePathStr=result/fajitaOut/sources/
 
 output_dir=result/tacoOutput
 
-relevantClasses=roops.core.objectsInstrumented.AllDefTest,roops.utilInstrumented.RoopsArray
+relevantClasses=roops.utilInstrumented.RoopsArray,roops.core.objectsInstrumented.MCCTest
 
-classToCheck=roops.core.objectsInstrumented.AllDefTest
+classToCheck=roops.core.objectsInstrumented.MCCTest
 
-methodToCheck=test6_0
+methodToCheck=test3_0
 
 dynalloy.toAlloy.loopUnroll=3
 
