Modified configuration files for test

--- a/fajita/config/roops_core_objects_BinTree/extractMinTest.fajita.config
+++ b/fajita/config/roops_core_objects_BinTree/extractMinTest.fajita.config
@@ -2,7 +2,7 @@ RELEVANT_CLASSES=roops.core.objects.BinTreeNode,roops.core.objects.BinTree,roops
 
 CLASS_TO_CHECK=roops.core.objects.BinTree
 
-METHOD_TO_CHECK=addTest
+METHOD_TO_CHECK=extractMinTest
 
 LOOP_UNROLL=1
 
