--- a/fajita/result/unroll_1/taco.properties
+++ b/fajita/result/unroll_1/taco.properties
@@ -90,5 +90,6 @@ dynalloy.toAlloy.loopUnroll=1
 # DANIEL: Removed assertion arguments since it's now inferred
 #assertionArguments=${ASSERTION_ARGUMENTS}
 
-objectScope=1
+objectScope=2
+useTightUpperBounds=true
 inferScope=true
