--- a/JDynAlloy/.classpath
+++ b/JDynAlloy/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/dynalloy"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/dynalloy4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
