--- a/fajita/.classpath
+++ b/fajita/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jdynalloy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/taco"/>
+	<classpathentry excluding="ar/|roops/" kind="src" path="test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
