Added evosuite tests

--- a/fajita/result/unroll_2/taco.properties
+++ b/fajita/result/unroll_2/taco.properties
@@ -70,17 +70,17 @@ useTightUpperBounds=true
 # BenchmarkMethod specific settings
 #-------------------------------------------------------------------------------------------------------------------
 
-jmlParser.appClassPath=result/unroll_2/fajitaOut/roops_core_objects_SinglyLinkedList/
+jmlParser.appClassPath=result/unroll_2/fajitaOut/roops_core_objects_BinTree/
 
-jmlParser.sourcePathStr=result/unroll_2/fajitaOut/roops_core_objects_SinglyLinkedList/
+jmlParser.sourcePathStr=result/unroll_2/fajitaOut/roops_core_objects_BinTree/
 
 output_dir=result/unroll_2/tacoOutput
 
-relevantClasses=roops.core.objects.SinglyLinkedListNode,roops.core.objects.SinglyLinkedList,roops.util.RoopsArray
+relevantClasses=roops.core.objects.BinTreeNode,roops.core.objects.BinTree,roops.util.RoopsArray
 
-classToCheck=roops.core.objects.SinglyLinkedList
+classToCheck=roops.core.objects.BinTree
 
-methodToCheck=containsTest_0
+methodToCheck=removeTest_0
 
 dynalloy.toAlloy.loopUnroll=2
 
